--- a/ECommerce/appsettings.json
+++ b/ECommerce/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=E_Commerce-DB;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+  },
   "AllowedHosts": "*"
 }
